Update lists at 20250129-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -789,6 +789,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b0:258:c600::1000;
@@ -1516,6 +1517,7 @@ allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
 allow 45.61.188.15;
+allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
@@ -1532,6 +1534,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1612,6 +1615,7 @@ allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.190.76.2;
 allow 64.190.76.3;
+allow 64.190.76.4;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
