--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -848,6 +848,7 @@ allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
 allow 45.61.188.15;
+allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
@@ -864,6 +865,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -944,6 +946,7 @@ allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.190.76.2;
 allow 64.190.76.3;
+allow 64.190.76.4;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
