--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -848,6 +848,7 @@ set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
 set_real_ip_from 45.61.188.15;
+set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
 set_real_ip_from 45.66.35.22;
@@ -864,6 +865,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -944,6 +946,7 @@ set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
+set_real_ip_from 64.190.76.4;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
