--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -98,6 +98,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b0:258:c600::1000;
