--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -98,6 +98,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
+deny 2001:67c:e28:1::4;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b0:258:c600::1000;
