--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -142,7 +142,6 @@ deny 146.59.126.232;
 deny 146.59.231.4;
 deny 146.70.146.26;
 deny 147.45.116.145;
-deny 147.45.78.34;
 deny 149.202.79.101;
 deny 149.202.79.129;
 deny 149.56.22.133;
@@ -204,7 +203,6 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
-deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -827,6 +825,7 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.124.193;
 deny 205.185.127.231;
+deny 209.135.168.90;
 deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.37.94;
@@ -894,7 +893,6 @@ deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
-deny 23.155.8.104;
 deny 23.184.48.254;
 deny 23.184.48.78;
 deny 23.236.122.193;
@@ -925,7 +923,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
+deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1169,7 +1167,6 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
-deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1540,7 +1537,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1578,6 +1574,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.102.89;
 deny 5.255.103.235;
 deny 5.255.104.202;
