--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -128,7 +128,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
+deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -371,7 +371,6 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
-deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
