--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -30,7 +30,6 @@ allow 104.244.78.162;
 allow 104.244.78.232;
 allow 104.244.78.233;
 allow 104.244.79.44;
-allow 104.244.79.50;
 allow 104.244.79.61;
 allow 107.170.61.199;
 allow 107.172.31.218;
@@ -66,7 +65,6 @@ allow 107.189.1.9;
 allow 107.189.2.108;
 allow 107.189.29.103;
 allow 107.189.29.184;
-allow 107.189.30.236;
 allow 107.189.30.49;
 allow 107.189.30.69;
 allow 107.189.30.86;
@@ -650,6 +648,7 @@ allow 194.26.192.97;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
+allow 195.26.245.180;
 allow 195.47.238.82;
 allow 195.47.238.83;
 allow 195.47.238.84;
@@ -790,9 +789,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
-allow 2001:67c:e28:1::2;
-allow 2001:67c:e28:1::3;
-allow 2001:67c:e28:1::4;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b0:258:c600::1000;
@@ -865,6 +861,7 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -891,6 +888,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.236.122.193;
@@ -921,6 +919,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -973,7 +972,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
@@ -997,7 +995,6 @@ allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
-allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
@@ -1016,6 +1013,7 @@ allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
+allow 2605:a140:2236:4415::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:120:c74::1;
 allow 2607:5300:205:200::3dde;
@@ -1529,7 +1527,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1606,9 +1603,6 @@ allow 5.45.98.162;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
-allow 64.190.76.2;
-allow 64.190.76.3;
-allow 64.190.76.4;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
