--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -96,6 +96,9 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::2;
+allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b0:258:c600::1000;
@@ -178,6 +181,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
 allow 2605:6400:30:f174:1:1:1:1;
@@ -201,6 +205,7 @@ allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
+allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
