--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -30,6 +30,7 @@ set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
 set_real_ip_from 104.244.78.233;
 set_real_ip_from 104.244.79.44;
+set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.170.61.199;
 set_real_ip_from 107.172.31.218;
@@ -65,6 +66,7 @@ set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.29.184;
+set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
@@ -789,6 +791,9 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
+set_real_ip_from 2001:67c:e28:1::2;
+set_real_ip_from 2001:67c:e28:1::3;
+set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b0:258:c600::1000;
@@ -812,7 +817,6 @@ set_real_ip_from 204.85.191.8;
 set_real_ip_from 204.85.191.9;
 set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.114.112;
-set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.119.35;
@@ -972,6 +976,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
 set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
@@ -995,6 +1000,7 @@ set_real_ip_from 2605:6400:30:f503::1;
 set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
+set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
@@ -1527,6 +1533,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1564,7 +1571,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.102.89;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1603,6 +1609,9 @@ set_real_ip_from 5.45.98.162;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
+set_real_ip_from 64.190.76.2;
+set_real_ip_from 64.190.76.3;
+set_real_ip_from 64.190.76.4;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
