--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -151,7 +151,10 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
-allow 154.9.226.237;
+allow 156.229.232.104;
+allow 156.229.232.108;
+allow 156.229.232.115;
+allow 156.229.232.98;
 allow 158.220.123.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
@@ -502,6 +505,8 @@ allow 185.246.188.74;
 allow 185.246.189.140;
 allow 185.246.189.99;
 allow 185.246.84.179;
+allow 185.247.184.105;
+allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
@@ -527,7 +532,6 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
-allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -815,6 +819,7 @@ allow 204.85.191.8;
 allow 204.85.191.9;
 allow 205.185.113.8;
 allow 205.185.114.112;
+allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
@@ -852,11 +857,6 @@ allow 23.129.64.173;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
-allow 23.137.253.108;
-allow 23.137.253.109;
-allow 23.137.253.110;
-allow 23.137.253.254;
-allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
@@ -928,11 +928,6 @@ allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
-allow 2602:fc24:19:1c9::1;
-allow 2602:fc24:19:2b4::1;
-allow 2602:fc24:19:30::1;
-allow 2602:fc24:19:524::1;
-allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
@@ -1098,7 +1093,6 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1127,8 +1121,15 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a05:541:110:20::1;
+allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1529,7 +1530,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1540,6 +1540,7 @@ allow 45.84.107.47;
 allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
+allow 45.9.148.50;
 allow 45.94.31.68;
 allow 45.95.169.100;
 allow 45.95.169.130;
@@ -1635,6 +1636,7 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
+allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
