--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -135,11 +135,6 @@ set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
-set_real_ip_from 2602:fc24:19:2b4::1;
-set_real_ip_from 2602:fc24:19:30::1;
-set_real_ip_from 2602:fc24:19:524::1;
-set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
@@ -304,7 +299,6 @@ set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -333,8 +327,15 @@ set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:129:2098::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
+set_real_ip_from 2a05:541:110:20::1;
+set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
+set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
+set_real_ip_from 2a05:b0c7:6388::1;
+set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
