--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -280,7 +280,6 @@ deny 185.129.61.8;
 deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
-deny 185.130.44.108;
 deny 185.130.44.43;
 deny 185.130.47.58;
 deny 185.132.53.12;
@@ -656,6 +655,7 @@ deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.26.245.180;
+deny 195.47.238.177;
 deny 195.47.238.82;
 deny 195.47.238.83;
 deny 195.47.238.84;
@@ -1130,6 +1130,7 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1140,6 +1141,7 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:129:2098::1;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1171,7 +1173,6 @@ deny 2a06:8781::9;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
-deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
@@ -1366,6 +1367,7 @@ deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
+deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -1553,6 +1555,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1587,6 +1590,7 @@ deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.102.89;
@@ -1629,7 +1633,6 @@ deny 5.45.98.162;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
-deny 62.182.84.146;
 deny 64.190.76.2;
 deny 64.190.76.3;
 deny 64.190.76.4;
@@ -1662,6 +1665,7 @@ deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.239.46.144;
 deny 84.247.165.51;
