--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,6 +12,7 @@ allow 103.251.167.20;
 allow 103.28.52.93;
 allow 104.168.144.253;
 allow 104.192.3.74;
+allow 104.194.87.207;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -201,6 +202,7 @@ allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.202;
@@ -500,6 +502,7 @@ allow 185.244.192.184;
 allow 185.246.128.161;
 allow 185.246.188.149;
 allow 185.246.188.73;
+allow 185.246.188.74;
 allow 185.246.189.140;
 allow 185.246.189.99;
 allow 185.246.84.179;
@@ -1034,7 +1037,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1158,6 +1160,7 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
+allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:8781::9;
@@ -1546,6 +1549,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1667,7 +1671,6 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
