Update lists at 20250205-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -223,6 +223,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.30.250.214;
 allow 179.250.245.181;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -412,41 +413,9 @@ allow 185.220.101.29;
 allow 185.220.101.3;
 allow 185.220.101.30;
 allow 185.220.101.31;
-allow 185.220.101.32;
-allow 185.220.101.33;
-allow 185.220.101.34;
-allow 185.220.101.35;
-allow 185.220.101.36;
-allow 185.220.101.37;
-allow 185.220.101.38;
-allow 185.220.101.39;
 allow 185.220.101.4;
-allow 185.220.101.40;
-allow 185.220.101.41;
-allow 185.220.101.42;
-allow 185.220.101.43;
-allow 185.220.101.44;
-allow 185.220.101.45;
-allow 185.220.101.46;
-allow 185.220.101.47;
-allow 185.220.101.48;
-allow 185.220.101.49;
 allow 185.220.101.5;
-allow 185.220.101.50;
-allow 185.220.101.51;
-allow 185.220.101.52;
-allow 185.220.101.53;
-allow 185.220.101.54;
-allow 185.220.101.55;
-allow 185.220.101.56;
-allow 185.220.101.57;
-allow 185.220.101.58;
-allow 185.220.101.59;
 allow 185.220.101.6;
-allow 185.220.101.60;
-allow 185.220.101.61;
-allow 185.220.101.62;
-allow 185.220.101.63;
 allow 185.220.101.64;
 allow 185.220.101.65;
 allow 185.220.101.66;
@@ -877,6 +846,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1302,41 +1272,9 @@ allow 2a0b:f4c2::20;
 allow 2a0b:f4c2::21;
 allow 2a0b:f4c2::22;
 allow 2a0b:f4c2::23;
-allow 2a0b:f4c2:2::32;
-allow 2a0b:f4c2:2::33;
-allow 2a0b:f4c2:2::34;
-allow 2a0b:f4c2:2::35;
-allow 2a0b:f4c2:2::36;
-allow 2a0b:f4c2:2::37;
-allow 2a0b:f4c2:2::38;
-allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
-allow 2a0b:f4c2:2::40;
-allow 2a0b:f4c2:2::41;
-allow 2a0b:f4c2:2::42;
-allow 2a0b:f4c2:2::43;
-allow 2a0b:f4c2:2::44;
-allow 2a0b:f4c2:2::45;
-allow 2a0b:f4c2:2::46;
-allow 2a0b:f4c2:2::47;
-allow 2a0b:f4c2:2::48;
-allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
-allow 2a0b:f4c2:2::50;
-allow 2a0b:f4c2:2::51;
-allow 2a0b:f4c2:2::52;
-allow 2a0b:f4c2:2::53;
-allow 2a0b:f4c2:2::54;
-allow 2a0b:f4c2:2::55;
-allow 2a0b:f4c2:2::56;
-allow 2a0b:f4c2:2::57;
-allow 2a0b:f4c2:2::58;
-allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
-allow 2a0b:f4c2:2::60;
-allow 2a0b:f4c2:2::61;
-allow 2a0b:f4c2:2::62;
-allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
 allow 2a0b:f4c2::29;
@@ -1484,6 +1422,7 @@ allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
+allow 2a12:a800:2:1:45:141:215:133;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
@@ -1545,6 +1484,7 @@ allow 45.138.16.76;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
+allow 45.141.215.133;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
@@ -1563,7 +1503,6 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
-allow 45.148.10.169;
 allow 45.151.122.34;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1586,7 +1525,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1605,7 +1543,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.134.170;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 5.104.86.6;
