--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -492,41 +492,9 @@ allow 2a0b:f4c2::20;
 allow 2a0b:f4c2::21;
 allow 2a0b:f4c2::22;
 allow 2a0b:f4c2::23;
-allow 2a0b:f4c2:2::32;
-allow 2a0b:f4c2:2::33;
-allow 2a0b:f4c2:2::34;
-allow 2a0b:f4c2:2::35;
-allow 2a0b:f4c2:2::36;
-allow 2a0b:f4c2:2::37;
-allow 2a0b:f4c2:2::38;
-allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
-allow 2a0b:f4c2:2::40;
-allow 2a0b:f4c2:2::41;
-allow 2a0b:f4c2:2::42;
-allow 2a0b:f4c2:2::43;
-allow 2a0b:f4c2:2::44;
-allow 2a0b:f4c2:2::45;
-allow 2a0b:f4c2:2::46;
-allow 2a0b:f4c2:2::47;
-allow 2a0b:f4c2:2::48;
-allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
-allow 2a0b:f4c2:2::50;
-allow 2a0b:f4c2:2::51;
-allow 2a0b:f4c2:2::52;
-allow 2a0b:f4c2:2::53;
-allow 2a0b:f4c2:2::54;
-allow 2a0b:f4c2:2::55;
-allow 2a0b:f4c2:2::56;
-allow 2a0b:f4c2:2::57;
-allow 2a0b:f4c2:2::58;
-allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
-allow 2a0b:f4c2:2::60;
-allow 2a0b:f4c2:2::61;
-allow 2a0b:f4c2:2::62;
-allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
 allow 2a0b:f4c2::29;
@@ -674,6 +642,7 @@ allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
+allow 2a12:a800:2:1:45:141:215:133;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
