--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -223,6 +223,7 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
+deny 178.30.250.214;
 deny 179.250.245.181;
 deny 179.43.128.16;
 deny 179.43.159.194;
@@ -412,41 +413,9 @@ deny 185.220.101.29;
 deny 185.220.101.3;
 deny 185.220.101.30;
 deny 185.220.101.31;
-deny 185.220.101.32;
-deny 185.220.101.33;
-deny 185.220.101.34;
-deny 185.220.101.35;
-deny 185.220.101.36;
-deny 185.220.101.37;
-deny 185.220.101.38;
-deny 185.220.101.39;
 deny 185.220.101.4;
-deny 185.220.101.40;
-deny 185.220.101.41;
-deny 185.220.101.42;
-deny 185.220.101.43;
-deny 185.220.101.44;
-deny 185.220.101.45;
-deny 185.220.101.46;
-deny 185.220.101.47;
-deny 185.220.101.48;
-deny 185.220.101.49;
 deny 185.220.101.5;
-deny 185.220.101.50;
-deny 185.220.101.51;
-deny 185.220.101.52;
-deny 185.220.101.53;
-deny 185.220.101.54;
-deny 185.220.101.55;
-deny 185.220.101.56;
-deny 185.220.101.57;
-deny 185.220.101.58;
-deny 185.220.101.59;
 deny 185.220.101.6;
-deny 185.220.101.60;
-deny 185.220.101.61;
-deny 185.220.101.62;
-deny 185.220.101.63;
 deny 185.220.101.64;
 deny 185.220.101.65;
 deny 185.220.101.66;
@@ -877,6 +846,7 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
+deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -1302,41 +1272,9 @@ deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
-deny 2a0b:f4c2:2::32;
-deny 2a0b:f4c2:2::33;
-deny 2a0b:f4c2:2::34;
-deny 2a0b:f4c2:2::35;
-deny 2a0b:f4c2:2::36;
-deny 2a0b:f4c2:2::37;
-deny 2a0b:f4c2:2::38;
-deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
-deny 2a0b:f4c2:2::40;
-deny 2a0b:f4c2:2::41;
-deny 2a0b:f4c2:2::42;
-deny 2a0b:f4c2:2::43;
-deny 2a0b:f4c2:2::44;
-deny 2a0b:f4c2:2::45;
-deny 2a0b:f4c2:2::46;
-deny 2a0b:f4c2:2::47;
-deny 2a0b:f4c2:2::48;
-deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
-deny 2a0b:f4c2:2::50;
-deny 2a0b:f4c2:2::51;
-deny 2a0b:f4c2:2::52;
-deny 2a0b:f4c2:2::53;
-deny 2a0b:f4c2:2::54;
-deny 2a0b:f4c2:2::55;
-deny 2a0b:f4c2:2::56;
-deny 2a0b:f4c2:2::57;
-deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
-deny 2a0b:f4c2:2::60;
-deny 2a0b:f4c2:2::61;
-deny 2a0b:f4c2:2::62;
-deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
@@ -1484,6 +1422,7 @@ deny 2a12:a800:2:1:45:138:16:76;
 deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
+deny 2a12:a800:2:1:45:141:215:133;
 deny 2a12:a800:2:1:45:141:215:167;
 deny 2a12:a800:2:1:45:141:215:169;
 deny 2a12:a800:2:1:45:141:215:17;
@@ -1545,6 +1484,7 @@ deny 45.138.16.76;
 deny 45.141.215.110;
 deny 45.141.215.111;
 deny 45.141.215.114;
+deny 45.141.215.133;
 deny 45.141.215.167;
 deny 45.141.215.169;
 deny 45.141.215.17;
@@ -1563,7 +1503,6 @@ deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.148.10.111;
-deny 45.148.10.169;
 deny 45.151.122.34;
 deny 45.61.185.172;
 deny 45.61.186.203;
@@ -1586,7 +1525,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1605,7 +1543,6 @@ deny 45.95.169.230;
 deny 45.95.169.255;
 deny 46.165.243.36;
 deny 46.182.21.248;
-deny 46.195.134.170;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 5.104.86.6;
