--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -492,41 +492,9 @@ deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
-deny 2a0b:f4c2:2::32;
-deny 2a0b:f4c2:2::33;
-deny 2a0b:f4c2:2::34;
-deny 2a0b:f4c2:2::35;
-deny 2a0b:f4c2:2::36;
-deny 2a0b:f4c2:2::37;
-deny 2a0b:f4c2:2::38;
-deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
-deny 2a0b:f4c2:2::40;
-deny 2a0b:f4c2:2::41;
-deny 2a0b:f4c2:2::42;
-deny 2a0b:f4c2:2::43;
-deny 2a0b:f4c2:2::44;
-deny 2a0b:f4c2:2::45;
-deny 2a0b:f4c2:2::46;
-deny 2a0b:f4c2:2::47;
-deny 2a0b:f4c2:2::48;
-deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
-deny 2a0b:f4c2:2::50;
-deny 2a0b:f4c2:2::51;
-deny 2a0b:f4c2:2::52;
-deny 2a0b:f4c2:2::53;
-deny 2a0b:f4c2:2::54;
-deny 2a0b:f4c2:2::55;
-deny 2a0b:f4c2:2::56;
-deny 2a0b:f4c2:2::57;
-deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
-deny 2a0b:f4c2:2::60;
-deny 2a0b:f4c2:2::61;
-deny 2a0b:f4c2:2::62;
-deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
@@ -674,6 +642,7 @@ deny 2a12:a800:2:1:45:138:16:76;
 deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
+deny 2a12:a800:2:1:45:141:215:133;
 deny 2a12:a800:2:1:45:141:215:167;
 deny 2a12:a800:2:1:45:141:215:169;
 deny 2a12:a800:2:1:45:141:215:17;
