--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -223,6 +223,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
+set_real_ip_from 178.30.250.214;
 set_real_ip_from 179.250.245.181;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
@@ -412,41 +413,9 @@ set_real_ip_from 185.220.101.29;
 set_real_ip_from 185.220.101.3;
 set_real_ip_from 185.220.101.30;
 set_real_ip_from 185.220.101.31;
-set_real_ip_from 185.220.101.32;
-set_real_ip_from 185.220.101.33;
-set_real_ip_from 185.220.101.34;
-set_real_ip_from 185.220.101.35;
-set_real_ip_from 185.220.101.36;
-set_real_ip_from 185.220.101.37;
-set_real_ip_from 185.220.101.38;
-set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
-set_real_ip_from 185.220.101.40;
-set_real_ip_from 185.220.101.41;
-set_real_ip_from 185.220.101.42;
-set_real_ip_from 185.220.101.43;
-set_real_ip_from 185.220.101.44;
-set_real_ip_from 185.220.101.45;
-set_real_ip_from 185.220.101.46;
-set_real_ip_from 185.220.101.47;
-set_real_ip_from 185.220.101.48;
-set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
-set_real_ip_from 185.220.101.50;
-set_real_ip_from 185.220.101.51;
-set_real_ip_from 185.220.101.52;
-set_real_ip_from 185.220.101.53;
-set_real_ip_from 185.220.101.54;
-set_real_ip_from 185.220.101.55;
-set_real_ip_from 185.220.101.56;
-set_real_ip_from 185.220.101.57;
-set_real_ip_from 185.220.101.58;
-set_real_ip_from 185.220.101.59;
 set_real_ip_from 185.220.101.6;
-set_real_ip_from 185.220.101.60;
-set_real_ip_from 185.220.101.61;
-set_real_ip_from 185.220.101.62;
-set_real_ip_from 185.220.101.63;
 set_real_ip_from 185.220.101.64;
 set_real_ip_from 185.220.101.65;
 set_real_ip_from 185.220.101.66;
@@ -877,6 +846,7 @@ set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
+set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
@@ -1302,41 +1272,9 @@ set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
 set_real_ip_from 2a0b:f4c2::23;
-set_real_ip_from 2a0b:f4c2:2::32;
-set_real_ip_from 2a0b:f4c2:2::33;
-set_real_ip_from 2a0b:f4c2:2::34;
-set_real_ip_from 2a0b:f4c2:2::35;
-set_real_ip_from 2a0b:f4c2:2::36;
-set_real_ip_from 2a0b:f4c2:2::37;
-set_real_ip_from 2a0b:f4c2:2::38;
-set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
-set_real_ip_from 2a0b:f4c2:2::40;
-set_real_ip_from 2a0b:f4c2:2::41;
-set_real_ip_from 2a0b:f4c2:2::42;
-set_real_ip_from 2a0b:f4c2:2::43;
-set_real_ip_from 2a0b:f4c2:2::44;
-set_real_ip_from 2a0b:f4c2:2::45;
-set_real_ip_from 2a0b:f4c2:2::46;
-set_real_ip_from 2a0b:f4c2:2::47;
-set_real_ip_from 2a0b:f4c2:2::48;
-set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
-set_real_ip_from 2a0b:f4c2:2::50;
-set_real_ip_from 2a0b:f4c2:2::51;
-set_real_ip_from 2a0b:f4c2:2::52;
-set_real_ip_from 2a0b:f4c2:2::53;
-set_real_ip_from 2a0b:f4c2:2::54;
-set_real_ip_from 2a0b:f4c2:2::55;
-set_real_ip_from 2a0b:f4c2:2::56;
-set_real_ip_from 2a0b:f4c2:2::57;
-set_real_ip_from 2a0b:f4c2:2::58;
-set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
-set_real_ip_from 2a0b:f4c2:2::60;
-set_real_ip_from 2a0b:f4c2:2::61;
-set_real_ip_from 2a0b:f4c2:2::62;
-set_real_ip_from 2a0b:f4c2:2::63;
 set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
@@ -1484,6 +1422,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
+set_real_ip_from 2a12:a800:2:1:45:141:215:133;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
@@ -1545,6 +1484,7 @@ set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
+set_real_ip_from 45.141.215.133;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
 set_real_ip_from 45.141.215.17;
@@ -1563,7 +1503,6 @@ set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.148.10.111;
-set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.151.122.34;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
@@ -1586,7 +1525,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1605,7 +1543,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.195.134.170;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 5.104.86.6;
