--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -492,41 +492,9 @@ set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
 set_real_ip_from 2a0b:f4c2::23;
-set_real_ip_from 2a0b:f4c2:2::32;
-set_real_ip_from 2a0b:f4c2:2::33;
-set_real_ip_from 2a0b:f4c2:2::34;
-set_real_ip_from 2a0b:f4c2:2::35;
-set_real_ip_from 2a0b:f4c2:2::36;
-set_real_ip_from 2a0b:f4c2:2::37;
-set_real_ip_from 2a0b:f4c2:2::38;
-set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
-set_real_ip_from 2a0b:f4c2:2::40;
-set_real_ip_from 2a0b:f4c2:2::41;
-set_real_ip_from 2a0b:f4c2:2::42;
-set_real_ip_from 2a0b:f4c2:2::43;
-set_real_ip_from 2a0b:f4c2:2::44;
-set_real_ip_from 2a0b:f4c2:2::45;
-set_real_ip_from 2a0b:f4c2:2::46;
-set_real_ip_from 2a0b:f4c2:2::47;
-set_real_ip_from 2a0b:f4c2:2::48;
-set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
-set_real_ip_from 2a0b:f4c2:2::50;
-set_real_ip_from 2a0b:f4c2:2::51;
-set_real_ip_from 2a0b:f4c2:2::52;
-set_real_ip_from 2a0b:f4c2:2::53;
-set_real_ip_from 2a0b:f4c2:2::54;
-set_real_ip_from 2a0b:f4c2:2::55;
-set_real_ip_from 2a0b:f4c2:2::56;
-set_real_ip_from 2a0b:f4c2:2::57;
-set_real_ip_from 2a0b:f4c2:2::58;
-set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
-set_real_ip_from 2a0b:f4c2:2::60;
-set_real_ip_from 2a0b:f4c2:2::61;
-set_real_ip_from 2a0b:f4c2:2::62;
-set_real_ip_from 2a0b:f4c2:2::63;
 set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
@@ -674,6 +642,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
+set_real_ip_from 2a12:a800:2:1:45:141:215:133;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
