--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -221,6 +221,7 @@ set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:a140:2236:4415::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:120:c74::1;
+set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
@@ -265,7 +266,6 @@ set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
 set_real_ip_from 2a02:c204:2220:8710::1;
 set_real_ip_from 2a02:c206:2095:2624::1;
-set_real_ip_from 2a02:c206:2239:9861::1;
 set_real_ip_from 2a02:c206:2240:3516::1;
 set_real_ip_from 2a02:c206:2240:5051::1;
 set_real_ip_from 2a02:c206:2240:5054::1;
@@ -278,7 +278,6 @@ set_real_ip_from 2a02:ed06::222;
 set_real_ip_from 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:15:928:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
-set_real_ip_from 2a03:4000:1c:4b3::443;
 set_real_ip_from 2a03:4000:1d:3d:1827:b1ff:feec:f6b0;
 set_real_ip_from 2a03:4000:1d:b7a:782f:17ff:fef0:a708;
 set_real_ip_from 2a03:4000:1e:7d4:84fb:5fff:fef3:9d56;
@@ -334,30 +333,6 @@ set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:129:2098::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:52c0:2000:518::133;
-set_real_ip_from 2a04:52c0:2000:518::134;
-set_real_ip_from 2a04:52c0:2000:518::135;
-set_real_ip_from 2a04:52c0:2000:518::136;
-set_real_ip_from 2a04:52c0:2000:518::137;
-set_real_ip_from 2a04:52c0:2000:518::138;
-set_real_ip_from 2a04:52c0:2000:518::139;
-set_real_ip_from 2a04:52c0:2000:518::140;
-set_real_ip_from 2a04:52c0:2000:518::141;
-set_real_ip_from 2a04:52c0:2000:518::142;
-set_real_ip_from 2a04:52c0:2000:518::143;
-set_real_ip_from 2a04:52c0:2000:518::144;
-set_real_ip_from 2a04:52c0:2000:518::145;
-set_real_ip_from 2a04:52c0:2000:518::146;
-set_real_ip_from 2a04:52c0:2000:518::147;
-set_real_ip_from 2a04:52c0:2000:518::148;
-set_real_ip_from 2a04:52c0:2000:518::149;
-set_real_ip_from 2a04:52c0:2000:518::150;
-set_real_ip_from 2a04:52c0:2000:518::151;
-set_real_ip_from 2a04:52c0:2000:518::152;
-set_real_ip_from 2a04:52c0:2000:518::153;
-set_real_ip_from 2a04:52c0:2000:518::154;
-set_real_ip_from 2a04:52c0:2000:518::155;
-set_real_ip_from 2a04:52c0:2000:518::156;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
@@ -400,7 +375,6 @@ set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:4140:6c6c::2;
-set_real_ip_from 2a0b:7140:8:1:5054:ff:fe43:9f9;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -663,5 +637,4 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:205;
 set_real_ip_from 2a12:a800:2:1:45:80:158:23;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
-set_real_ip_from 2a12:de40:33:455::;
 set_real_ip_from 2a13:d207:0:461::1;
