Update lists at 20250206-0900

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -226,6 +226,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -543,7 +544,6 @@ allow 2a0d:bbc7:0:1::394;
 allow 2a0d:bbc7:0:1::3bd;
 allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
-allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
