--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -226,6 +226,7 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
+deny 2607:5501:3000:1dc::2;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2620:18c:0:192::171;
@@ -543,7 +544,6 @@ deny 2a0d:bbc7:0:1::394;
 deny 2a0d:bbc7:0:1::3bd;
 deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
-deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
