--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -10,7 +10,6 @@ deny 103.208.86.5;
 deny 103.251.167.10;
 deny 103.251.167.20;
 deny 104.192.3.74;
-deny 104.194.87.207;
 deny 104.219.236.100;
 deny 104.244.72.115;
 deny 104.244.72.132;
@@ -132,7 +131,6 @@ deny 142.44.234.69;
 deny 144.172.118.4;
 deny 144.172.118.55;
 deny 144.172.118.73;
-deny 144.202.5.2;
 deny 146.19.143.47;
 deny 146.59.126.232;
 deny 146.59.231.4;
@@ -234,7 +232,6 @@ deny 179.43.159.78;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
-deny 18.236.178.175;
 deny 184.75.223.227;
 deny 185.100.85.132;
 deny 185.100.85.22;
@@ -407,9 +404,37 @@ deny 185.220.101.29;
 deny 185.220.101.3;
 deny 185.220.101.30;
 deny 185.220.101.31;
+deny 185.220.101.32;
+deny 185.220.101.33;
+deny 185.220.101.34;
+deny 185.220.101.35;
+deny 185.220.101.36;
+deny 185.220.101.37;
+deny 185.220.101.39;
 deny 185.220.101.4;
+deny 185.220.101.40;
+deny 185.220.101.42;
+deny 185.220.101.43;
+deny 185.220.101.44;
+deny 185.220.101.45;
+deny 185.220.101.46;
+deny 185.220.101.47;
+deny 185.220.101.49;
 deny 185.220.101.5;
+deny 185.220.101.50;
+deny 185.220.101.51;
+deny 185.220.101.52;
+deny 185.220.101.53;
+deny 185.220.101.55;
+deny 185.220.101.56;
+deny 185.220.101.57;
+deny 185.220.101.58;
+deny 185.220.101.59;
 deny 185.220.101.6;
+deny 185.220.101.60;
+deny 185.220.101.61;
+deny 185.220.101.62;
+deny 185.220.101.63;
 deny 185.220.101.64;
 deny 185.220.101.65;
 deny 185.220.101.66;
@@ -635,7 +660,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.188;
+deny 198.167.206.161;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -880,11 +905,11 @@ deny 2402:1f00:8100:400::9;
 deny 2407:3640:2207:8882::1;
 deny 24.240.72.170;
 deny 2.56.10.36;
+deny 2.58.56.12;
 deny 2.58.56.220;
 deny 2.58.56.233;
 deny 2.58.56.35;
 deny 2.58.56.43;
-deny 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1230,9 +1255,37 @@ deny 2a0b:f4c2::20;
 deny 2a0b:f4c2::21;
 deny 2a0b:f4c2::22;
 deny 2a0b:f4c2::23;
+deny 2a0b:f4c2:2::32;
+deny 2a0b:f4c2:2::33;
+deny 2a0b:f4c2:2::34;
+deny 2a0b:f4c2:2::35;
+deny 2a0b:f4c2:2::36;
+deny 2a0b:f4c2:2::37;
+deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
+deny 2a0b:f4c2:2::40;
+deny 2a0b:f4c2:2::42;
+deny 2a0b:f4c2:2::43;
+deny 2a0b:f4c2:2::44;
+deny 2a0b:f4c2:2::45;
+deny 2a0b:f4c2:2::46;
+deny 2a0b:f4c2:2::47;
+deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
+deny 2a0b:f4c2:2::50;
+deny 2a0b:f4c2:2::51;
+deny 2a0b:f4c2:2::52;
+deny 2a0b:f4c2:2::53;
+deny 2a0b:f4c2:2::55;
+deny 2a0b:f4c2:2::56;
+deny 2a0b:f4c2:2::57;
+deny 2a0b:f4c2:2::58;
+deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
+deny 2a0b:f4c2:2::60;
+deny 2a0b:f4c2:2::61;
+deny 2a0b:f4c2:2::62;
+deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
@@ -1298,6 +1351,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1326,6 +1380,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:3238::1;
+deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1425,6 +1480,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
