--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -115,7 +115,6 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
-allow 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -460,9 +459,37 @@ allow 2a0b:f4c2::20;
 allow 2a0b:f4c2::21;
 allow 2a0b:f4c2::22;
 allow 2a0b:f4c2::23;
+allow 2a0b:f4c2:2::32;
+allow 2a0b:f4c2:2::33;
+allow 2a0b:f4c2:2::34;
+allow 2a0b:f4c2:2::35;
+allow 2a0b:f4c2:2::36;
+allow 2a0b:f4c2:2::37;
+allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
+allow 2a0b:f4c2:2::40;
+allow 2a0b:f4c2:2::42;
+allow 2a0b:f4c2:2::43;
+allow 2a0b:f4c2:2::44;
+allow 2a0b:f4c2:2::45;
+allow 2a0b:f4c2:2::46;
+allow 2a0b:f4c2:2::47;
+allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
+allow 2a0b:f4c2:2::50;
+allow 2a0b:f4c2:2::51;
+allow 2a0b:f4c2:2::52;
+allow 2a0b:f4c2:2::53;
+allow 2a0b:f4c2:2::55;
+allow 2a0b:f4c2:2::56;
+allow 2a0b:f4c2:2::57;
+allow 2a0b:f4c2:2::58;
+allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
+allow 2a0b:f4c2:2::60;
+allow 2a0b:f4c2:2::61;
+allow 2a0b:f4c2:2::62;
+allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
 allow 2a0b:f4c2::28;
 allow 2a0b:f4c2::29;
@@ -528,6 +555,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -556,6 +584,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
+allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
