--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -10,7 +10,6 @@ set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 104.192.3.74;
-set_real_ip_from 104.194.87.207;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -132,7 +131,6 @@ set_real_ip_from 142.44.234.69;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.73;
-set_real_ip_from 144.202.5.2;
 set_real_ip_from 146.19.143.47;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
@@ -234,7 +232,6 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.236.178.175;
 set_real_ip_from 184.75.223.227;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -407,9 +404,37 @@ set_real_ip_from 185.220.101.29;
 set_real_ip_from 185.220.101.3;
 set_real_ip_from 185.220.101.30;
 set_real_ip_from 185.220.101.31;
+set_real_ip_from 185.220.101.32;
+set_real_ip_from 185.220.101.33;
+set_real_ip_from 185.220.101.34;
+set_real_ip_from 185.220.101.35;
+set_real_ip_from 185.220.101.36;
+set_real_ip_from 185.220.101.37;
+set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
+set_real_ip_from 185.220.101.40;
+set_real_ip_from 185.220.101.42;
+set_real_ip_from 185.220.101.43;
+set_real_ip_from 185.220.101.44;
+set_real_ip_from 185.220.101.45;
+set_real_ip_from 185.220.101.46;
+set_real_ip_from 185.220.101.47;
+set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
+set_real_ip_from 185.220.101.50;
+set_real_ip_from 185.220.101.51;
+set_real_ip_from 185.220.101.52;
+set_real_ip_from 185.220.101.53;
+set_real_ip_from 185.220.101.55;
+set_real_ip_from 185.220.101.56;
+set_real_ip_from 185.220.101.57;
+set_real_ip_from 185.220.101.58;
+set_real_ip_from 185.220.101.59;
 set_real_ip_from 185.220.101.6;
+set_real_ip_from 185.220.101.60;
+set_real_ip_from 185.220.101.61;
+set_real_ip_from 185.220.101.62;
+set_real_ip_from 185.220.101.63;
 set_real_ip_from 185.220.101.64;
 set_real_ip_from 185.220.101.65;
 set_real_ip_from 185.220.101.66;
@@ -635,7 +660,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.144.178.185;
 set_real_ip_from 198.144.178.187;
-set_real_ip_from 198.167.206.188;
+set_real_ip_from 198.167.206.161;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -880,11 +905,11 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
+set_real_ip_from 2.58.56.12;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.233;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
-set_real_ip_from 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1230,9 +1255,37 @@ set_real_ip_from 2a0b:f4c2::20;
 set_real_ip_from 2a0b:f4c2::21;
 set_real_ip_from 2a0b:f4c2::22;
 set_real_ip_from 2a0b:f4c2::23;
+set_real_ip_from 2a0b:f4c2:2::32;
+set_real_ip_from 2a0b:f4c2:2::33;
+set_real_ip_from 2a0b:f4c2:2::34;
+set_real_ip_from 2a0b:f4c2:2::35;
+set_real_ip_from 2a0b:f4c2:2::36;
+set_real_ip_from 2a0b:f4c2:2::37;
+set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
+set_real_ip_from 2a0b:f4c2:2::40;
+set_real_ip_from 2a0b:f4c2:2::42;
+set_real_ip_from 2a0b:f4c2:2::43;
+set_real_ip_from 2a0b:f4c2:2::44;
+set_real_ip_from 2a0b:f4c2:2::45;
+set_real_ip_from 2a0b:f4c2:2::46;
+set_real_ip_from 2a0b:f4c2:2::47;
+set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
+set_real_ip_from 2a0b:f4c2:2::50;
+set_real_ip_from 2a0b:f4c2:2::51;
+set_real_ip_from 2a0b:f4c2:2::52;
+set_real_ip_from 2a0b:f4c2:2::53;
+set_real_ip_from 2a0b:f4c2:2::55;
+set_real_ip_from 2a0b:f4c2:2::56;
+set_real_ip_from 2a0b:f4c2:2::57;
+set_real_ip_from 2a0b:f4c2:2::58;
+set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
+set_real_ip_from 2a0b:f4c2:2::60;
+set_real_ip_from 2a0b:f4c2:2::61;
+set_real_ip_from 2a0b:f4c2:2::62;
+set_real_ip_from 2a0b:f4c2:2::63;
 set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
@@ -1298,6 +1351,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
@@ -1326,6 +1380,7 @@ set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
+set_real_ip_from 2a0f:9400:7e11:8e09::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1425,6 +1480,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
