Update lists at 20250206-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -317,7 +317,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
@@ -334,6 +333,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -465,21 +465,25 @@ allow 2a0b:f4c2:2::34;
 allow 2a0b:f4c2:2::35;
 allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
+allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
+allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
+allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
 allow 2a0b:f4c2:2::53;
+allow 2a0b:f4c2:2::54;
 allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
