--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -317,7 +317,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
@@ -334,6 +333,7 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:122:49::1;
+deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
@@ -465,21 +465,25 @@ deny 2a0b:f4c2:2::34;
 deny 2a0b:f4c2:2::35;
 deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
+deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
+deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
 deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
+deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
 deny 2a0b:f4c2:2::53;
+deny 2a0b:f4c2:2::54;
 deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
