--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -317,7 +317,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
@@ -334,6 +333,7 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:122:49::1;
+set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -465,21 +465,25 @@ set_real_ip_from 2a0b:f4c2:2::34;
 set_real_ip_from 2a0b:f4c2:2::35;
 set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
+set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
+set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
 set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
 set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
+set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
 set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
 set_real_ip_from 2a0b:f4c2:2::53;
+set_real_ip_from 2a0b:f4c2:2::54;
 set_real_ip_from 2a0b:f4c2:2::55;
 set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
