--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -147,6 +147,7 @@ allow 154.16.116.61;
 allow 154.26.159.157;
 allow 156.229.232.101;
 allow 156.229.232.104;
+allow 156.229.232.108;
 allow 156.229.232.115;
 allow 156.229.232.54;
 allow 156.229.232.98;
@@ -410,21 +411,25 @@ allow 185.220.101.34;
 allow 185.220.101.35;
 allow 185.220.101.36;
 allow 185.220.101.37;
+allow 185.220.101.38;
 allow 185.220.101.39;
 allow 185.220.101.4;
 allow 185.220.101.40;
+allow 185.220.101.41;
 allow 185.220.101.42;
 allow 185.220.101.43;
 allow 185.220.101.44;
 allow 185.220.101.45;
 allow 185.220.101.46;
 allow 185.220.101.47;
+allow 185.220.101.48;
 allow 185.220.101.49;
 allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
 allow 185.220.101.53;
+allow 185.220.101.54;
 allow 185.220.101.55;
 allow 185.220.101.56;
 allow 185.220.101.57;
@@ -858,7 +863,6 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
-allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -1113,7 +1117,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
@@ -1130,6 +1133,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1261,21 +1265,25 @@ allow 2a0b:f4c2:2::34;
 allow 2a0b:f4c2:2::35;
 allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
+allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
+allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
+allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
 allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
 allow 2a0b:f4c2:2::53;
+allow 2a0b:f4c2:2::54;
 allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
@@ -1537,6 +1545,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1567,7 +1576,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.224;
 allow 5.255.100.227;
 allow 5.255.101.10;
 allow 5.255.101.131;
