--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -147,6 +147,7 @@ deny 154.16.116.61;
 deny 154.26.159.157;
 deny 156.229.232.101;
 deny 156.229.232.104;
+deny 156.229.232.108;
 deny 156.229.232.115;
 deny 156.229.232.54;
 deny 156.229.232.98;
@@ -410,21 +411,25 @@ deny 185.220.101.34;
 deny 185.220.101.35;
 deny 185.220.101.36;
 deny 185.220.101.37;
+deny 185.220.101.38;
 deny 185.220.101.39;
 deny 185.220.101.4;
 deny 185.220.101.40;
+deny 185.220.101.41;
 deny 185.220.101.42;
 deny 185.220.101.43;
 deny 185.220.101.44;
 deny 185.220.101.45;
 deny 185.220.101.46;
 deny 185.220.101.47;
+deny 185.220.101.48;
 deny 185.220.101.49;
 deny 185.220.101.5;
 deny 185.220.101.50;
 deny 185.220.101.51;
 deny 185.220.101.52;
 deny 185.220.101.53;
+deny 185.220.101.54;
 deny 185.220.101.55;
 deny 185.220.101.56;
 deny 185.220.101.57;
@@ -858,7 +863,6 @@ deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
-deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
@@ -1113,7 +1117,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
@@ -1130,6 +1133,7 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:122:49::1;
+deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
@@ -1261,21 +1265,25 @@ deny 2a0b:f4c2:2::34;
 deny 2a0b:f4c2:2::35;
 deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
+deny 2a0b:f4c2:2::38;
 deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
+deny 2a0b:f4c2:2::41;
 deny 2a0b:f4c2:2::42;
 deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
+deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
 deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
 deny 2a0b:f4c2:2::53;
+deny 2a0b:f4c2:2::54;
 deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
@@ -1537,6 +1545,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1567,7 +1576,6 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.224;
 deny 5.255.100.227;
 deny 5.255.101.10;
 deny 5.255.101.131;
