--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -147,6 +147,7 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 156.229.232.101;
 set_real_ip_from 156.229.232.104;
+set_real_ip_from 156.229.232.108;
 set_real_ip_from 156.229.232.115;
 set_real_ip_from 156.229.232.54;
 set_real_ip_from 156.229.232.98;
@@ -410,21 +411,25 @@ set_real_ip_from 185.220.101.34;
 set_real_ip_from 185.220.101.35;
 set_real_ip_from 185.220.101.36;
 set_real_ip_from 185.220.101.37;
+set_real_ip_from 185.220.101.38;
 set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
 set_real_ip_from 185.220.101.40;
+set_real_ip_from 185.220.101.41;
 set_real_ip_from 185.220.101.42;
 set_real_ip_from 185.220.101.43;
 set_real_ip_from 185.220.101.44;
 set_real_ip_from 185.220.101.45;
 set_real_ip_from 185.220.101.46;
 set_real_ip_from 185.220.101.47;
+set_real_ip_from 185.220.101.48;
 set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
 set_real_ip_from 185.220.101.50;
 set_real_ip_from 185.220.101.51;
 set_real_ip_from 185.220.101.52;
 set_real_ip_from 185.220.101.53;
+set_real_ip_from 185.220.101.54;
 set_real_ip_from 185.220.101.55;
 set_real_ip_from 185.220.101.56;
 set_real_ip_from 185.220.101.57;
@@ -858,7 +863,6 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
-set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
@@ -1113,7 +1117,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
@@ -1130,6 +1133,7 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:122:49::1;
+set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -1261,21 +1265,25 @@ set_real_ip_from 2a0b:f4c2:2::34;
 set_real_ip_from 2a0b:f4c2:2::35;
 set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
+set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
+set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
 set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
 set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
+set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
 set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
 set_real_ip_from 2a0b:f4c2:2::53;
+set_real_ip_from 2a0b:f4c2:2::54;
 set_real_ip_from 2a0b:f4c2:2::55;
 set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
@@ -1537,6 +1545,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1567,7 +1576,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
