Update lists at 20250208-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -715,6 +715,7 @@ allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
+allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -1552,7 +1553,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1572,6 +1572,7 @@ allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
+allow 46.234.47.105;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
