--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -16,6 +16,7 @@ deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
+deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
